909
This no longer crashes the compiler in trunk.  Instead:
{code}
a.scala:6: error: Test.plus[Test._0,Num,s,z] does not take type parameters
  trait Bad[Num[s[_], z], s[_], z] extends Test[Bad[plus[_0, Num, s, z][s, z], s, z]]
                                                    ^
{code}
